--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
   bottom: 0;
   left: 0;
   z-index: 99;
-  max-width: 100vw;
-  max-height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
   overflow: hidden;
   box-sizing: border-box;
 }
